--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest  # You can use other OSes as well
 
     steps:
+    - name: Unity - Activate
+      uses: game-ci/unity-activate@v2.0.0
+
     - name: Checkout repository
       uses: actions/checkout@v3
       
