--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
     - name: Unity - Activate
       uses: game-ci/unity-activate@v2.0.0
+      id: getManualLicenseFile
 
     - name: Checkout repository
       uses: actions/checkout@v3
