--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,12 @@ jobs:
       
     - name: Unity - Builder
       uses: game-ci/unity-builder@v4.3.0
+      env:
+        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
       with:
+        targetPlatform: StandaloneWindows64
         version: '2022.3.47f1'  # Use the Unity version you need
 
     - name: Build the server
