--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,8 @@ jobs:
         path: Library
         key: Library-PFE
         restore-keys: |
-          Library-PFE
-          Library
+          Library-PFE-
+          Library-
 
     - name: Unity - Builder
       uses: game-ci/unity-builder@v4.3.0
@@ -30,7 +30,7 @@ jobs:
         UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
       with:
         targetPlatform: StandaloneWindows64
-        version: '2022.3.47f1'  # Use the Unity version you need
+        unityVersion: '2022.3.47f1'
 
     - name: Build the server
       run: |
