--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,31 +22,6 @@ jobs:
           Library-PFE
           Library
 
-    - name: Building Client
-      uses: game-ci/unity-builder@v4.3.0
-      env:
-        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-      with:
-        buildMethod: MedievalRacingBuildPipeline.BuildGameForWindows
-        unityVersion: '2022.3.47f1'
-
-    - name: Saving Client Build
-      uses: actions/upload-artifact@v3
-      with:
-        name: MedievalRacing
-        path: ./Builds/Client/*
-
-    - name: Restore Library Cache
-      uses: actions/cache@v4
-      with:
-        path: Library
-        key: Library-PFE
-        restore-keys: |
-          Library-PFE
-          Library
-
     - name: Building Server
       uses: game-ci/unity-builder@v4.3.0
       env:
@@ -63,10 +38,13 @@ jobs:
         name: MedievalRacingServer
         path: ./Builds/Server/*
 
+    - name: Setup SSH
+      uses: webfactory/ssh-agent@v0.7.0
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
     - name: Deploy to VM
-      env:
-        PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       run: |
-        ssh -i $PRIVATE_KEY -o StrictHostKeyChecking=no jlenoir@157.159.195.98 "mkdir -p /home/jlenoir/server && rm -rf /home/jlenoir/server_lastest_version/*"
-        scp -i $PRIVATE_KEY -r ./Builds/Server/* jlenoir@157.159.195.98:/home/jlenoir/server_lastest_version
-        ssh -i $PRIVATE_KEY -o StrictHostKeyChecking=no jlenoir@157.159.195.98 "/home/jlenoir/scripts/hooks/new_version_available.sh"
+        ssh -o StrictHostKeyChecking=no jlenoir@157.159.195.98 "mkdir -p /home/jlenoir/server && rm -rf /home/jlenoir/server_lastest_version/*"
+        scp -r ./Builds/Server/* jlenoir@157.159.195.98:/home/jlenoir/server_lastest_version
+        ssh -o StrictHostKeyChecking=no jlenoir@157.159.195.98 "/home/jlenoir/scripts/hooks/new_version_available.sh"
