--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
         UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
       with:
-        buildMethod: MedievalRacingBuildPipeline.BuildServerForLinux
+        buildMethod: MedievalRacingBuildPipeline.HeadlessBuildServerForLinux
         unityVersion: '2022.3.47f1'
         
     - name: Saving Server Build
