--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,16 @@
 name: Build and Deploy Unity Server
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      branch_name:
+        description: 'Build basing on branch...'
+        required: true
+        default: 'dev'
+        type: choice
+        options:
+          - 'main'
+          - 'dev'
 
 jobs:
   build:
