--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
     - name: Deploy Server Script
       run: |
         if [ -f "${{ github.event.inputs.serverManagerSourcePath }}" ]; then
-          scp ${{ github.event.inputs.serverManagerSourcePath }} jlenoir@157.159.195.98:${{ github.event.inputs.serverManagerDestinationPath }}
+          scp -o StrictHostKeyChecking=no ${{ github.event.inputs.serverManagerSourcePath }} jlenoir@157.159.195.98:${{ github.event.inputs.serverManagerDestinationPath }}
           echo "Uploaded server manager to VM (at ${{ github.event.inputs.serverManagerDestinationPath }})."
         else
           echo "Error: File ${{ github.event.inputs.serverManagerSourcePath }} does not exist!"
@@ -75,6 +75,6 @@ jobs:
         ssh -o StrictHostKeyChecking=no jlenoir@157.159.195.98 "mkdir -p /home/jlenoir/server && rm -rf /home/jlenoir/server_lastest_version/*"
         scp -r ./Builds/Server/* jlenoir@157.159.195.98:/home/jlenoir/server_lastest_version
         if [ "${{ github.event.inputs.runServerManager }}" == "true" ]; then
-            echo "Launching server..."
+          echo "Launching server..."
           ssh -o StrictHostKeyChecking=no jlenoir@157.159.195.98 "/home/jlenoir/scripts/hooks/new_version_available.sh"
         fi
