added logs to room servers and updated workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,15 @@ on:
       serverManagerDestinationPath:
         description: "Path of where the server manager will be located in the VM"
         required: true
-        default: "/home/jlenoir/server_manager.py"
+        default: "/home/jlenoir/"
+      rebuildServer:
+        description: "Rebuild server."
+        required: true
+        type: boolean
       runServerManager:
         description: "Trigger the new version available script."
         required: true
-        default: "true"
+        type: boolean
 
 jobs:
   build:
@@ -34,6 +38,7 @@ jobs:
           Library-${{ runner.os }}-
 
     - name: Building Server
+      if: ${{ github.event.inputs.rebuildServer == true }}
       uses: game-ci/unity-builder@v4.3.0
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
@@ -48,6 +53,7 @@ jobs:
     - run: ls -la Library
 
     - name: Saving Server Build
+      if: ${{ github.event.inputs.rebuildServer == true }}
       uses: actions/upload-artifact@v4
       with:
         name: MedievalRacingServer
@@ -71,10 +77,13 @@ jobs:
         fi
 
     - name: Deploy Build to VM
+      if: ${{ github.event.inputs.rebuildServer == true }}
       run: |
         ssh -o StrictHostKeyChecking=no jlenoir@157.159.195.98 "mkdir -p /home/jlenoir/server && rm -rf /home/jlenoir/server_lastest_version/*"
         scp -r ./Builds/Server/* jlenoir@157.159.195.98:/home/jlenoir/server_lastest_version
-        if [ "${{ github.event.inputs.runServerManager }}" == "true" ]; then
-          echo "Launching server..."
-          ssh -o StrictHostKeyChecking=no jlenoir@157.159.195.98 "/home/jlenoir/scripts/hooks/new_version_available.sh"
-        fi
+        
+    - name: Run Server Manager
+      if: ${{ github.event.inputs.runServerManager == true }}
+      run: |
+        echo "Launching server..."
+        ssh -o StrictHostKeyChecking=no jlenoir@157.159.195.98 "/home/jlenoir/scripts/hooks/new_version_available.sh"
