--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
       uses: actions/checkout@v3
       
     - name: Restore Library Cache
+      if: ${{ github.event.inputs.rebuildServer }}
       uses: actions/cache@v4
       with:
         path: Library
