--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
       uses: actions/checkout@v3
       
     - name: Restore Library Cache
-      if: ${{ github.event.inputs.rebuildServer }}
+      if: ${{ github.event.inputs.rebuildServer == 'true' }}
       uses: actions/cache@v4
       with:
         path: Library
@@ -39,7 +39,7 @@ jobs:
           Library-${{ runner.os }}-
 
     - name: Building Server
-      if: ${{ github.event.inputs.rebuildServer }}
+      if: ${{ github.event.inputs.rebuildServer == 'true' }}
       uses: game-ci/unity-builder@v4.3.0
       env:
         UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
@@ -54,7 +54,7 @@ jobs:
     - run: ls -la Library
 
     - name: Saving Server Build
-      if: ${{ github.event.inputs.rebuildServer }}
+      if: ${{ github.event.inputs.rebuildServer == 'true' }}
       uses: actions/upload-artifact@v4
       with:
         name: MedievalRacingServer
@@ -78,13 +78,13 @@ jobs:
         fi
 
     - name: Deploy Build to VM
-      if: ${{ github.event.inputs.rebuildServer }}
+      if: ${{ github.event.inputs.rebuildServer == 'true' }}
       run: |
         ssh -o StrictHostKeyChecking=no jlenoir@157.159.195.98 "mkdir -p /home/jlenoir/server && rm -rf /home/jlenoir/server_lastest_version/*"
         scp -r ./Builds/Server/* jlenoir@157.159.195.98:/home/jlenoir/server_lastest_version
         
     - name: Run Server Manager
-      if: ${{ github.event.inputs.runServerManager }}
+      if: ${{ github.event.inputs.runServerManager == 'true' }}
       run: |
         echo "Launching server..."
         ssh -o StrictHostKeyChecking=no jlenoir@157.159.195.98 "/home/jlenoir/scripts/hooks/new_version_available.sh"
